<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/employerLayout"
    android:background="@color/colorLogoText"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/patient_employer_information"
        android:textColor="@color/colorText"
        android:gravity="center"
        android:id="@+id/textView28"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textStyle="normal|bold"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/textView28">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
        android:text="@string/occupation"
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/appbar_padding"
        android:layout_marginTop="@dimen/appbar_padding"
        android:id="@+id/textView7"
        android:textSize="20sp"

        android:layout_marginEnd="16dp"/>

    <TextView
        android:text="@string/industry"
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerOccupation"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="15dp"
        android:id="@+id/textView12"
        android:textSize="20sp" />

    <Spinner
        android:layout_width="160dp"
        android:layout_height="@dimen/input_size"
        android:layout_alignTop="@+id/textView12"
        android:layout_toEndOf="@+id/textView12"
        android:layout_marginStart="@dimen/appbar_padding"
        android:entries="@array/industry"
        android:theme="@style/mySpinnerItemStyle"
        android:background="@color/colorInput"
        android:id="@+id/spinnerIndustry" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:inputType="textPersonName"
        android:hint="@string/employer_city"
        android:textColorHint="@color/hint_color"
        android:background="@color/colorInput"
        android:ems="10"
        android:layout_below="@+id/editTextEmpAddress"
        android:layout_alignStart="@+id/editTextEmpAddress"
        android:layout_marginTop="16dp"
        android:id="@+id/editTextEmpCity"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:inputType="textPersonName"
        android:hint="@string/employer_address"
        android:textColorHint="@color/hint_color"
        android:background="@color/colorInput"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:id="@+id/editTextEmpAddress"
        android:layout_below="@+id/editTextEmployer"
        android:layout_alignStart="@+id/editTextEmployer"
        android:layout_alignEnd="@+id/editTextEmployer"
        android:textSize="20sp" />

    <TextView
        android:text="@string/employer_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmpState"
        android:layout_alignStart="@+id/editTextEmpState"
        android:layout_marginTop="@dimen/appbar_padding"
        android:id="@+id/textView16"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:layout_marginBottom="10dp"/>

    <Spinner
        android:layout_width="@dimen/spinner_width"
        android:layout_height="@dimen/input_size"
        android:background="@color/colorInput"
        android:layout_alignTop="@+id/textView16"
        android:layout_toEndOf="@+id/textView16"
        android:layout_marginStart="17dp"
        android:theme="@style/mySpinnerItemStyle"
        android:entries="@array/countries"
        android:id="@+id/spinnerEmPCountry"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_size"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextEmpPostCode"
        android:background="@color/colorInput"
        android:hint="@string/employer_postcode"
        android:textColorHint="@color/hint_color"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/editTextEmpState"
        android:layout_alignBottom="@+id/editTextEmpState"
        android:layout_alignStart="@+id/editTextStreet"
        android:layout_alignEnd="@+id/editTextOccupation"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:inputType="textPersonName"
        android:hint="@string/occupation_other"
        android:textColorHint="@color/hint_color"
        android:background="@color/colorInput"
        android:ems="10"
        android:layout_marginStart="@dimen/appbar_padding"
        android:id="@+id/editTextOccupation"
        android:textSize="20sp"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:layout_alignTop="@+id/spinnerOccupation"
        android:layout_toEndOf="@+id/spinnerEmPCountry" />

    <Spinner
        android:layout_width="130dp"
        android:layout_height="@dimen/input_size"
        android:id="@+id/spinnerOccupation"
        android:background="@color/colorInput"
        android:theme="@style/mySpinnerItemStyle"
        android:entries="@array/occupation"
        android:layout_alignTop="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:inputType="textPersonName"
        android:background="@color/colorInput"
        android:ems="10"
        android:textColorHint="@color/hint_color"
        android:id="@+id/editTextIndustry"
        android:hint="@string/industry_other"
        android:layout_marginTop="@dimen/appbar_padding"
        android:textSize="20sp"
        android:layout_below="@+id/editTextOccupation"
        android:layout_alignStart="@+id/editTextOccupation"
        android:layout_alignEnd="@+id/editTextOccupation" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:inputType="textPersonName"
        android:hint="@string/employer"
        android:background="@color/colorInput"
        android:ems="10"
        android:layout_marginTop="@dimen/appbar_padding"
        android:id="@+id/editTextEmployer"
        android:textSize="20sp"
        android:layout_below="@+id/spinnerIndustry"
        android:layout_alignStart="@+id/textView12"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:textColorHint="@color/hint_color"/>

    <Button
        android:text="Save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_below="@+id/spinnerEmPCountry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/appbar_padding"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:layout_marginStart="@dimen/appbar_padding"
        android:id="@+id/buttonSave_employer"
        android:textSize="20sp"
        android:theme="@style/myButtonStyle"
        android:elevation="10dp"
        android:textStyle="normal|bold"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_size"
        android:inputType="textPersonName"
        android:ems="10"
        android:textColorHint="@color/hint_color"
        android:layout_marginTop="16dp"
        android:id="@+id/editTextEmpState"
        android:background="@color/colorInput"
        android:hint="@string/employer_state"
        android:textSize="20sp"
        android:layout_below="@+id/editTextEmpCity"
        android:layout_alignStart="@+id/editTextEmpCity" />
            </RelativeLayout>
    </ScrollView>

</RelativeLayout>