<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Controller.Activities.PatientOptionScreen"
    tools:showIn="@layout/activity_patient_option_screen">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/appbar_padding"
        android:text="@string/choose_option"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/toolbar_opt"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/registeredButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_below="@+id/newButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:text="@string/buton_text_manage"
        android:theme= "@style/myButtonStyle"
        android:textSize="30dp"
        android:textStyle="normal|bold"
        android:layout_alignStart="@+id/newButton"
        android:layout_alignEnd="@+id/newButton"/>

    <Button
        android:id="@+id/viewStaffActivitiesButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_below="@+id/registeredButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:theme= "@style/myButtonStyle"
        android:elevation="10dp"
        android:text="@string/button_text_view"
        android:textSize="30dp"
        android:textStyle="normal|bold"
        android:layout_alignStart="@+id/newButton"
        android:layout_alignEnd="@+id/newButton"/>

    <Button
        android:id="@+id/newButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="150dp"
        android:theme= "@style/myButtonStyle"
        android:elevation="10dp"
        android:text="@string/button_text_new"
        android:textSize="30dp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />
</RelativeLayout>