<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:id="@+id/insuranceLayout"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:text="@string/insurance_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/appbar_padding"
        android:id="@+id/textView22"
        android:textStyle="normal|bold"
        android:textSize="25sp"
        android:textColor="@color/colorText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:inputType="textPersonName"
        android:ems="10"
        android:paddingStart="5dp"
        android:layout_below="@+id/textView22"
        android:background="@color/colorInput"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/appbar_padding"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:layout_marginTop="@dimen/appbar_padding"
        android:id="@+id/editTextInsProvider"
        android:hint="@string/insurance_provider"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:inputType="textPersonName"
        android:ems="10"
        android:paddingStart="5dp"
        android:layout_below="@+id/editTextInsScheme"
        android:background="@color/colorInput"
        android:layout_alignStart="@+id/editTextInsScheme"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:layout_marginTop="@dimen/appbar_padding"
        android:id="@+id/editTextInsMemberName"
        android:hint="@string/policy_member_name"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:inputType="number"
        android:ems="10"
        android:paddingStart="5dp"
        android:id="@+id/editTextPolicyNo"
        android:background="@color/colorInput"
        android:hint="@string/policy_number"
        android:textSize="20sp"
        android:layout_below="@+id/editTextInsMemberName"
        android:layout_alignStart="@+id/editTextInsMemberName"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:layout_marginTop="@dimen/appbar_padding" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:inputType="date"
        android:ems="10"
        android:paddingStart="5dp"
        android:background="@color/colorInput"
        android:id="@+id/editTextInsValidDate"
        android:hint="@string/policy_valid_from"
        android:textSize="20sp"
        android:layout_below="@id/editTextPolicyNo"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:layout_marginTop="@dimen/appbar_padding"
        android:layout_alignStart="@+id/editTextPolicyNo" />

    <Button
        android:text="Save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_below="@+id/editTextInsValidDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/appbar_padding"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:layout_marginStart="@dimen/appbar_padding"
        android:id="@+id/buttonSave_insurance"
        android:textSize="20sp"
        android:theme="@style/myButtonStyle"
        android:elevation="10dp"
        android:textStyle="normal|bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:inputType="textPersonName"
        android:ems="10"
        android:paddingStart="5dp"
        android:background="@color/colorInput"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:id="@+id/editTextInsScheme"
        android:hint="@string/scheme_name"
        android:textSize="20sp"
        android:layout_below="@+id/editTextInsProvider"
        android:layout_alignStart="@+id/editTextInsProvider" />
</RelativeLayout>