<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/visitLayout">

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewPName_visit"
        android:layout_marginStart="@dimen/appbar_padding"
        android:layout_marginTop="@dimen/appbar_padding"
        android:text="@string/visit_category"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerVisitType"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:layout_alignTop="@+id/textView36"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:layout_marginStart="@dimen/appbar_padding"
        android:layout_toEndOf="@+id/textView36"
        android:background="@color/colorInput"
        android:entries="@array/visit_category" />

    <EditText
        android:id="@+id/editTextFacility"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:layout_alignStart="@+id/textView36"
        android:layout_below="@+id/spinnerVisitType"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:layout_marginTop="@dimen/appbar_padding"
        android:background="@color/colorInput"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hospital_facility"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextBillingFacility"
        android:layout_below="@+id/editTextBillingFacility"
        android:layout_marginTop="@dimen/appbar_padding"
        android:text="@string/sensitivity"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerSensitivity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:layout_alignTop="@+id/textView37"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:layout_toEndOf="@+id/textView36"
        android:background="@color/colorInput"
        android:entries="@array/sensitivity" />

    <EditText
        android:id="@+id/editTextOnset"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_size"
        android:layout_alignStart="@+id/editTextDOS"
        android:layout_below="@+id/editTextDOS"
        android:layout_marginTop="@dimen/appbar_padding"
        android:background="@color/colorInput"
        android:ems="10"
        android:hint="@string/hosp_date_onset"
        android:inputType="date" />

    <Button
        android:id="@+id/buttonSaveVisit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_below="@+id/editTextOnset"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/appbar_padding"
        android:layout_marginStart="@dimen/appbar_padding"
        android:layout_marginTop="@dimen/appbar_padding"
        android:elevation="10dp"
        android:text="Save"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:theme="@style/myButtonStyle" />

    <EditText
        android:id="@+id/editTextBillingFacility"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_size"
        android:layout_marginTop="16dp"
        android:background="@color/colorInput"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/editTextFacility"
        android:layout_alignStart="@+id/editTextFacility"
        android:hint="@string/billing_facility"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextDOS"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_size"
        android:layout_marginTop="16dp"
        android:background="@color/colorInput"
        android:ems="10"
        android:hint="@string/date_of_service"
        android:inputType="date"
        android:textSize="20sp"
        android:layout_below="@+id/spinnerSensitivity"
        android:layout_alignStart="@+id/textView37" />

    <TextView
        android:id="@+id/textViewPName_visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Visit Information:"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView36"
        android:layout_marginStart="81dp" />
    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPatientName_visit"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textColor="@color/colorText"
        android:layout_marginStart="@dimen/appbar_padding"
        android:layout_alignBottom="@+id/textViewPName_visit"
        android:layout_toEndOf="@+id/textViewPName_visit" />
</RelativeLayout>